tests/errors/assertion.ensureWithCustomMessage.res
>> Assertion | File: assertion.ensureWithCustomMessage.art
       error | Line: 2
             | 
             | "Wrong calc": [0 = 1 + 1]
